@@ -5,6 +5,8 @@
 \section{Version 2.22.0}{\itemize{
 \item Updated to the latest version of the \pkg{tatami} library (3.0.0).
 Also updated the associated libraries (\pkg{tatami_chunked} and \pkg{tatami_r}) and added the new \pkg{tatami_stats} library.
+
+\item Automatically attempt to use \pkg{beachmat.hdf5} (if installed) when encountering the various \pkg{HDF5Array} classes.
 }}
 
 \section{Version 2.14.0}{\itemize{
